<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
    </group>

    <group>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_categories"
            android:title="@string/menu_gallery"/>
    </group>

    <group>
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_slideshow" />
    </group>

    <group>
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_tools" />
    </group>

    <group>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_share" />
    </group>

    <group>
        <item
            android:id="@+id/nav_award"
            android:icon="@drawable/ic_action_medal"
            android:title="@string/menu_send" />
    </group>




    <group>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="MES FAVORIES" />
    </group>

    <group>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_newspaper"
            android:title="NOUVEAU" />
    </group>

    <group>
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_chat_bubble"
            android:title="NOUS CONTACTER" />
    </group>

    <group>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_send" />
    </group>

    <group>
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_share"
            android:title="PARTAGER L'APPLICATION"/>
    </group>

    <group>
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_star_circle"
            android:title="@string/menu_send" />
    </group>

    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="REGLAGES"/>
    </group>

    <group>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_logout"
            android:title="SE CONNECTER" />
    </group>

</menu>

