<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/intro_bg_img"
        android:scaleType="centerCrop" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/updateInfoBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal" >

                <com.obiangetfils.kermashop.customview.RoundedImageView
                    android:id="@+id/user_photo_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile"/>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/updateInfoForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/input_field_margin">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_field_height"
                    android:hint="@string/first_name"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/textColorSecondary"
                    android:textColorHint="@color/textColorPrimaryDark"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textAlignment="viewStart"
                    android:gravity="start|center_vertical"
                    android:layout_marginTop="@dimen/input_field_margin"
                    android:background="@drawable/rounded_corners_edittext_dark" />
                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_field_height"
                    android:hint="@string/last_name"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/textColorSecondary"
                    android:textColorHint="@color/textColorPrimaryDark"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textAlignment="viewStart"
                    android:gravity="start|center_vertical"
                    android:layout_marginTop="@dimen/input_field_margin"
                    android:background="@drawable/rounded_corners_edittext_dark" />
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_field_height"
                    android:hint="@string/username"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/textColorSecondary"
                    android:textColorHint="@color/textColorPrimaryDark"
                    android:drawableStart="@drawable/ic_account"
                    android:drawablePadding="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:enabled="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:textAlignment="viewStart"
                    android:gravity="start|center_vertical"
                    android:layout_marginTop="@dimen/input_field_margin"
                    android:background="@drawable/rounded_corners_edittext_dark" />


                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_field_height"
                    android:layout_marginTop="@dimen/input_field_margin"
                    android:background="@drawable/rounded_corners_edittext_dark"
                    android:drawableStart="@drawable/ic_call"
                    android:drawablePadding="15dp"
                    android:gravity="start|center_vertical"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/textColorSecondary"
                    android:textColorHint="@color/textColorPrimaryDark" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_field_height"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:textColor="@color/textColorSecondary"
                    android:textColorHint="@color/textColorPrimaryDark"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textAlignment="viewStart"
                    android:gravity="start|center_vertical"
                    android:layout_marginTop="@dimen/input_field_margin"
                    android:background="@drawable/rounded_corners_edittext_dark" />
                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_field_height"
                    android:hint="@string/new_password"
                    android:inputType="textPassword|textNoSuggestions"
                    android:textColor="@color/textColorSecondary"
                    android:textColorHint="@color/textColorPrimaryDark"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textAlignment="viewStart"
                    android:gravity="start|center_vertical"
                    android:layout_marginTop="@dimen/input_field_margin"
                    android:background="@drawable/rounded_corners_edittext_dark" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateInfoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/button_text_size"
        android:background="@drawable/rounded_corners_bouton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>